--- a/server/package.json
+++ b/server/package.json
@@ -8,17 +8,21 @@
   "dependencies": {
     "@apollo/client": "3.7.17",
     "@apollo/server": "4.7.5",
+    "@graphql-tools/schema": "^10.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql": "16.7.1",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.14.2",
     "http": "^0.0.1-security",
-    "invariant": "2.2.4",
-    "pusher": "^5.1.3"
+    "invariant": "2.2.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.15",
     "@types/invariant": "2.2.35",
     "@types/node": "20.4.2",
+    "@types/ws": "^8.5.8",
     "ts-node": "10.9.1",
     "ts-node-dev": "2.0.0",
     "typescript": "5.1.6"
