--- a/webclient/package.json
+++ b/webclient/package.json
@@ -12,9 +12,12 @@
     "@types/node": "16.18.38",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "graphql-ws": "^5.14.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.16.0",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.0",
     "typescript": "4.9.5",
     "uuid": "^9.0.1",
     "uuidv4": "^6.2.13",
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
